# gdl

./: .gitignore  Cargo.toml  README.md  TESTING.md  build.rs  flake.nix  install.ps1
.github/workflows/: ci.yml  packages.yml  release-from-run.yml  update-package-managers.yml
docs/: release.md
scripts/: install.ps1  install.sh
src/: cache.rs  cli.rs  http.rs  main.rs  overwrite.rs  paths.rs  progress.rs  rate_limit.rs  types.rs  utils.rs
src/download/: calculations.rs  file.rs  manager.rs  mod.rs  task_builder.rs  tasks.rs  validation.rs
src/git/: commands.rs  mod.rs  sparse.rs  utils.rs
src/github/: api.rs  mod.rs  types.rs
src/http/: headers.rs  mod.rs
src/update/: manager.rs  mod.rs  prompt.rs  state.rs
src/zip/: archive.rs  mod.rs
tests/: smoke.rs
