[package]
name = "gdl"
version = "0.2.2"
edition = "2021"
build = "build.rs"
repository = "https://github.com/CaddyGlow/gdl"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5"
atty = "0.2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "sync",
] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
self_update = { version = "0.42", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "rustls",
] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
