[package]
name = "ghdl"
version = "0.1.1"
edition = "2024"
authors = ["CaddyGlow"]
description = "CLI for downloading files or directories from GitHub repositories using the REST API"
documentation = "https://github.com/CaddyGlow/ghdl#readme"
readme = "README.md"
homepage = "https://github.com/CaddyGlow/ghdl"
repository = "https://github.com/CaddyGlow/ghdl"
license = "MIT"
keywords = ["github", "download", "git", "cli", "rest-api"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[[bin]]
name = "ghdl"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
atty = "0.2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "sync",
] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
self_update = { version = "0.42", default-features = false, features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "rustls",
] }
tempfile = "3.23"
sha2 = "0.10"
sha1 = "0.10"
indicatif = { version = "0.18", features = ["tokio"] }
indicatif-log-bridge = "0.2"
zip = "6.0"
regex = "1.12"
console = "0.16"
rusty-hook = "0.11.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
